sdk-docs_versioned_docs/version-19.0.0/enums/Generated/Types/ModuleName/ModuleName.md
---
id: "ModuleName"
title: "Enumeration: ModuleName"
sidebar_label: "ModuleName"
---

[generated/types](../../../../modules/Generated/Types/Types.md).ModuleName

## Enumeration Members

### Asset

• **Asset** = ``"asset"``

#### Defined in

[generated/types.ts:752](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L752)

___

### Authorship

• **Authorship** = ``"authorship"``

#### Defined in

[generated/types.ts:735](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L735)

___

### Babe

• **Babe** = ``"babe"``

#### Defined in

[generated/types.ts:732](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L732)

___

### Balances

• **Balances** = ``"balances"``

#### Defined in

[generated/types.ts:736](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L736)

___

### Bridge

• **Bridge** = ``"bridge"``

#### Defined in

[generated/types.ts:746](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L746)

___

### CapitalDistribution

• **CapitalDistribution** = ``"capitalDistribution"``

#### Defined in

[generated/types.ts:753](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L753)

___

### CddServiceProviders

• **CddServiceProviders** = ``"cddServiceProviders"``

#### Defined in

[generated/types.ts:738](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L738)

___

### Checkpoint

• **Checkpoint** = ``"checkpoint"``

#### Defined in

[generated/types.ts:754](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L754)

___

### CommitteeMembership

• **CommitteeMembership** = ``"committeeMembership"``

#### Defined in

[generated/types.ts:740](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L740)

___

### ComplianceManager

• **ComplianceManager** = ``"complianceManager"``

#### Defined in

[generated/types.ts:755](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L755)

___

### Contracts

• **Contracts** = ``"contracts"``

#### Defined in

[generated/types.ts:773](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L773)

___

### CorporateAction

• **CorporateAction** = ``"corporateAction"``

#### Defined in

[generated/types.ts:756](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L756)

___

### CorporateBallot

• **CorporateBallot** = ``"corporateBallot"``

#### Defined in

[generated/types.ts:757](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L757)

___

### ExternalAgents

• **ExternalAgents** = ``"externalAgents"``

#### Defined in

[generated/types.ts:767](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L767)

___

### Grandpa

• **Grandpa** = ``"grandpa"``

#### Defined in

[generated/types.ts:749](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L749)

___

### Identity

• **Identity** = ``"identity"``

#### Defined in

[generated/types.ts:737](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L737)

___

### ImOnline

• **ImOnline** = ``"imOnline"``

#### Defined in

[generated/types.ts:750](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L750)

___

### Indices

• **Indices** = ``"indices"``

#### Defined in

[generated/types.ts:734](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L734)

___

### MultiSig

• **MultiSig** = ``"multiSig"``

#### Defined in

[generated/types.ts:745](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L745)

___

### Pips

• **Pips** = ``"pips"``

#### Defined in

[generated/types.ts:758](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L758)

___

### PolymeshCommittee

• **PolymeshCommittee** = ``"polymeshCommittee"``

#### Defined in

[generated/types.ts:739](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L739)

___

### PolymeshContracts

• **PolymeshContracts** = ``"polymeshContracts"``

#### Defined in

[generated/types.ts:771](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L771)

___

### Portfolio

• **Portfolio** = ``"portfolio"``

#### Defined in

[generated/types.ts:759](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L759)

___

### Preimage

• **Preimage** = ``"preimage"``

#### Defined in

[generated/types.ts:772](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L772)

___

### ProtocolFee

• **ProtocolFee** = ``"protocolFee"``

#### Defined in

[generated/types.ts:760](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L760)

___

### Relayer

• **Relayer** = ``"relayer"``

#### Defined in

[generated/types.ts:768](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L768)

___

### Rewards

• **Rewards** = ``"rewards"``

#### Defined in

[generated/types.ts:769](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L769)

___

### Scheduler

• **Scheduler** = ``"scheduler"``

#### Defined in

[generated/types.ts:761](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L761)

___

### Session

• **Session** = ``"session"``

#### Defined in

[generated/types.ts:748](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L748)

___

### Settlement

• **Settlement** = ``"settlement"``

#### Defined in

[generated/types.ts:762](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L762)

___

### Staking

• **Staking** = ``"staking"``

#### Defined in

[generated/types.ts:747](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L747)

___

### Statistics

• **Statistics** = ``"statistics"``

#### Defined in

[generated/types.ts:763](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L763)

___

### Sto

• **Sto** = ``"sto"``

#### Defined in

[generated/types.ts:764](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L764)

___

### Sudo

• **Sudo** = ``"sudo"``

#### Defined in

[generated/types.ts:751](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L751)

___

### System

• **System** = ``"system"``

#### Defined in

[generated/types.ts:731](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L731)

___

### TechnicalCommittee

• **TechnicalCommittee** = ``"technicalCommittee"``

#### Defined in

[generated/types.ts:741](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L741)

___

### TechnicalCommitteeMembership

• **TechnicalCommitteeMembership** = ``"technicalCommitteeMembership"``

#### Defined in

[generated/types.ts:742](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L742)

___

### TestUtils

• **TestUtils** = ``"testUtils"``

#### Defined in

[generated/types.ts:770](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L770)

___

### Timestamp

• **Timestamp** = ``"timestamp"``

#### Defined in

[generated/types.ts:733](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L733)

___

### Treasury

• **Treasury** = ``"treasury"``

#### Defined in

[generated/types.ts:765](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L765)

___

### UpgradeCommittee

• **UpgradeCommittee** = ``"upgradeCommittee"``

#### Defined in

[generated/types.ts:743](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L743)

___

### UpgradeCommitteeMembership

• **UpgradeCommitteeMembership** = ``"upgradeCommitteeMembership"``

#### Defined in

[generated/types.ts:744](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L744)

___

### Utility

• **Utility** = ``"utility"``

#### Defined in

[generated/types.ts:766](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L766)
