sdk-docs_versioned_docs/version-26.1.x/enums/Generated/Types/ModuleName/ModuleName.md
---
id: "ModuleName"
title: "Enumeration: ModuleName"
sidebar_label: "ModuleName"
---

[generated/types](../../../../modules/Generated/Types/Types.md).ModuleName

## Enumeration Members

### Asset

• **Asset** = ``"asset"``

#### Defined in

[generated/types.ts:862](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L862)

___

### Authorship

• **Authorship** = ``"authorship"``

#### Defined in

[generated/types.ts:845](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L845)

___

### Babe

• **Babe** = ``"babe"``

#### Defined in

[generated/types.ts:842](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L842)

___

### Balances

• **Balances** = ``"balances"``

#### Defined in

[generated/types.ts:846](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L846)

___

### Bridge

• **Bridge** = ``"bridge"``

#### Defined in

[generated/types.ts:856](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L856)

___

### CapitalDistribution

• **CapitalDistribution** = ``"capitalDistribution"``

#### Defined in

[generated/types.ts:863](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L863)

___

### CddServiceProviders

• **CddServiceProviders** = ``"cddServiceProviders"``

#### Defined in

[generated/types.ts:848](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L848)

___

### Checkpoint

• **Checkpoint** = ``"checkpoint"``

#### Defined in

[generated/types.ts:864](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L864)

___

### CommitteeMembership

• **CommitteeMembership** = ``"committeeMembership"``

#### Defined in

[generated/types.ts:850](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L850)

___

### ComplianceManager

• **ComplianceManager** = ``"complianceManager"``

#### Defined in

[generated/types.ts:865](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L865)

___

### Contracts

• **Contracts** = ``"contracts"``

#### Defined in

[generated/types.ts:883](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L883)

___

### CorporateAction

• **CorporateAction** = ``"corporateAction"``

#### Defined in

[generated/types.ts:866](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L866)

___

### CorporateBallot

• **CorporateBallot** = ``"corporateBallot"``

#### Defined in

[generated/types.ts:867](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L867)

___

### ElectionProviderMultiPhase

• **ElectionProviderMultiPhase** = ``"electionProviderMultiPhase"``

#### Defined in

[generated/types.ts:886](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L886)

___

### ExternalAgents

• **ExternalAgents** = ``"externalAgents"``

#### Defined in

[generated/types.ts:877](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L877)

___

### Grandpa

• **Grandpa** = ``"grandpa"``

#### Defined in

[generated/types.ts:859](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L859)

___

### Identity

• **Identity** = ``"identity"``

#### Defined in

[generated/types.ts:847](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L847)

___

### ImOnline

• **ImOnline** = ``"imOnline"``

#### Defined in

[generated/types.ts:860](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L860)

___

### Indices

• **Indices** = ``"indices"``

#### Defined in

[generated/types.ts:844](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L844)

___

### MultiSig

• **MultiSig** = ``"multiSig"``

#### Defined in

[generated/types.ts:855](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L855)

___

### Nft

• **Nft** = ``"nft"``

#### Defined in

[generated/types.ts:884](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L884)

___

### Pips

• **Pips** = ``"pips"``

#### Defined in

[generated/types.ts:868](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L868)

___

### PolymeshCommittee

• **PolymeshCommittee** = ``"polymeshCommittee"``

#### Defined in

[generated/types.ts:849](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L849)

___

### PolymeshContracts

• **PolymeshContracts** = ``"polymeshContracts"``

#### Defined in

[generated/types.ts:881](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L881)

___

### Portfolio

• **Portfolio** = ``"portfolio"``

#### Defined in

[generated/types.ts:869](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L869)

___

### Preimage

• **Preimage** = ``"preimage"``

#### Defined in

[generated/types.ts:882](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L882)

___

### ProtocolFee

• **ProtocolFee** = ``"protocolFee"``

#### Defined in

[generated/types.ts:870](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L870)

___

### Relayer

• **Relayer** = ``"relayer"``

#### Defined in

[generated/types.ts:878](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L878)

___

### Rewards

• **Rewards** = ``"rewards"``

#### Defined in

[generated/types.ts:879](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L879)

___

### Scheduler

• **Scheduler** = ``"scheduler"``

#### Defined in

[generated/types.ts:871](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L871)

___

### Session

• **Session** = ``"session"``

#### Defined in

[generated/types.ts:858](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L858)

___

### Settlement

• **Settlement** = ``"settlement"``

#### Defined in

[generated/types.ts:872](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L872)

___

### Staking

• **Staking** = ``"staking"``

#### Defined in

[generated/types.ts:857](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L857)

___

### StateTrieMigration

• **StateTrieMigration** = ``"stateTrieMigration"``

#### Defined in

[generated/types.ts:885](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L885)

___

### Statistics

• **Statistics** = ``"statistics"``

#### Defined in

[generated/types.ts:873](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L873)

___

### Sto

• **Sto** = ``"sto"``

#### Defined in

[generated/types.ts:874](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L874)

___

### Sudo

• **Sudo** = ``"sudo"``

#### Defined in

[generated/types.ts:861](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L861)

___

### System

• **System** = ``"system"``

#### Defined in

[generated/types.ts:841](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L841)

___

### TechnicalCommittee

• **TechnicalCommittee** = ``"technicalCommittee"``

#### Defined in

[generated/types.ts:851](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L851)

___

### TechnicalCommitteeMembership

• **TechnicalCommitteeMembership** = ``"technicalCommitteeMembership"``

#### Defined in

[generated/types.ts:852](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L852)

___

### TestUtils

• **TestUtils** = ``"testUtils"``

#### Defined in

[generated/types.ts:880](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L880)

___

### Timestamp

• **Timestamp** = ``"timestamp"``

#### Defined in

[generated/types.ts:843](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L843)

___

### Treasury

• **Treasury** = ``"treasury"``

#### Defined in

[generated/types.ts:875](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L875)

___

### UpgradeCommittee

• **UpgradeCommittee** = ``"upgradeCommittee"``

#### Defined in

[generated/types.ts:853](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L853)

___

### UpgradeCommitteeMembership

• **UpgradeCommitteeMembership** = ``"upgradeCommitteeMembership"``

#### Defined in

[generated/types.ts:854](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L854)

___

### Utility

• **Utility** = ``"utility"``

#### Defined in

[generated/types.ts:876](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L876)
